[package]
edition = "2021"
name = "nix-socket"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.2.0", features = ["napi3"] }
napi-derive = "2.2.0"
libc = "0.2.123"
nix = "0.23"
uv-sys = "0.1"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
